syntax = "proto3";

option csharp_namespace = "Nmt.Grpc.Protos";
option go_package = "pkg/grpc";

package auth;

service Auth {
  rpc Login(LoginRequest) returns (AuthResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (AuthResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
  string hostname = 3;
  string machineSpecificStamp = 4;
}

message RefreshTokenRequest {
  string accessToken = 1;
  string refreshToken = 2;
}

message AuthResponse {
  string accessToken = 1;
  string refreshToken = 2;
}
